tests/NormalTests/paczka1/small_fuzzy/69601981.err
Error in line 1: GAcOGNYKXN A969 86,9
Error in line 4: bajab S630 24,9
